make options page

--- a/html/popup.html
+++ b/html/popup.html
@@ -20,7 +20,7 @@
 		<br />
 		<label for"in-close">Close tab? </label>
 		<input type="checkbox" name="close" id="in-close" checked="checked" />
-		<input type="submit" value="Submit" />
+		<input type="submit" value="Save" />
 	</form>
 	<script src="/lib/site/js/stairz.js" type="module"></script>
 	<script src="/js/main.js" type="module"></script>
