--- a/html/options.html
+++ b/html/options.html
@@ -13,6 +13,6 @@
 	</form>
 	<script src="/lib/site/js/stairz.js" type="module"></script>
 	<script src="/js/main.js" type="module"></script>
-	<script src="/js/options.js" type="module"></script>
+	<script src="/js/config.js" type="module"></script>
 </body>
 </html>
