html/*: use `<button>` instead of `<input>`

--- a/html/config.html
+++ b/html/config.html
@@ -9,7 +9,7 @@
 		<label for="popup_close">Close by default tabs saved with popup:</label>
 		<input type="checkbox" name="popup_close" id="popup_close" />
 		<br />
-		<input type="submit" value="Save" />
+		<button type="submit">Save</button>
 	</form>
 	<script src="/lib/site/js/stairz.js" type="module"></script>
 	<script src="/js/main.js" type="module"></script>
