minimally implement tag filtering

--- a/html/bucket.html
+++ b/html/bucket.html
@@ -24,6 +24,7 @@
 			<button type="submit">Save</button>
 		</form>
 	</dialog>
+	<input type="text" id="search" />
 	<ul id="main"></ul>
 	<script src="/lib/site/js/stairz.js" type="module"></script>
 	<script src="/js/main.js" type="module"></script>
