bucket.*: rename `#main` => `#bucket`

--- a/html/bucket.html
+++ b/html/bucket.html
@@ -25,7 +25,7 @@
 		</form>
 	</dialog>
 	<input type="text" id="search" />
-	<ul id="main"></ul>
+	<ul id="bucket"></ul>
 	<script src="/lib/site/js/stairz.js" type="module"></script>
 	<script src="/js/main.js" type="module"></script>
 	<script src="/js/bucket.js" type="module"></script>
