bucket.{js,html}: mk btn to open cfg

--- a/html/bucket.html
+++ b/html/bucket.html
@@ -25,6 +25,7 @@
 		</form>
 	</dialog>
 	<input type="text" id="search" />
+	<button type="button" id="config">Settings</button>
 	<ul id="bucket"></ul>
 	<script src="/lib/site/js/stairz.js" type="module"></script>
 	<script src="/js/main.js" type="module"></script>
