--- a/html/bucket.html
+++ b/html/bucket.html
@@ -41,6 +41,7 @@
 	<script src="/lib/site/js/stairz.js" type="module"></script>
 	<script src="/js/main.js" type="module"></script>
 	<script src="/js/bucket.js" type="module"></script>
+	<script src="/js/bucket_search.js" type="module"></script>
 	<script src="/js/bucket_nav.js" type="module"></script>
 </body>
 </html>
