import /lib/site/css/reset.css

--- a/html/config.html
+++ b/html/config.html
@@ -3,11 +3,13 @@
 <head>
 	<title>LinkBucket</title>
 	<meta charset="utf-8" />
+	<link rel="stylesheet" href="/lib/site/css/reset.css" />
+	<link rel="stylesheet" href="/css/main.css" />
 </head>
 <body>
 	<form>
-		<label for="popup_close">Close by default tabs saved with popup:</label>
 		<input type="checkbox" name="popup_close" id="popup_close" />
+		<label for="popup_close">Close by default tabs saved with popup:</label>
 		<br />
 		<button type="submit">Save</button>
 	</form>
