--- a/html/popup.html
+++ b/html/popup.html
@@ -3,6 +3,8 @@
 <head>
 	<title>LinkBucket</title>
 	<meta charset="utf-8" />
+	<link rel="stylesheet" href="/lib/site/css/reset.css" />
+	<link rel="stylesheet" href="/css/main.css" />
 </head>
 <body>
 	<form>
