--- a/html/bucket.html
+++ b/html/bucket.html
@@ -3,6 +3,7 @@
 <head>
 	<title>LinkBucket</title>
 	<meta charset="utf-8" />
+	<link rel="stylesheet" href="/lib/site/css/reset.css" />
 	<link rel="stylesheet" href="/css/main.css" />
 </head>
 <body>
